@@ -24,6 +24,9 @@ Next release
 
 - Remove unused ``jquery.autocomplete.min.js`` file from static directory.
 
+- SelectWidget now has a ``size`` attribute to support single select widgets
+  that are not dropdowns.
+
 0.9 (2011-03-01)
 ----------------
 
